--- a/src/content/iframe.css
+++ b/src/content/iframe.css
@@ -23,28 +23,26 @@ article {
   background-color: var(--bg);
 }
 
-article>*:not(h2):not(h3) {
-  margin-left: 2rem;
+h1, h2 {
+  font-weight: normal;
 }
 
-h1,
-h2,
-h3,
-h4 {
-  letter-spacing: 1px;
-  /* font-weight: normal; */
+h1 {
+  color: var(--header);
+  font-size: 2.2em;
+  border-bottom: 1px solid var(--border);
 }
 
 h2 {
-  color: var(--header);
-  font-size: 1.8em;
-}
-
-h3 {
   color: var(--nav-hover);
-  font-size: 1.4em;
+  font-size: 1.5em;
 }
 
+:not(h1) + h2 {
+  margin-top: 1.5em;
+}
+
+h1 span,
 h2 span,
 h3 span {
   color: var(--dim);
@@ -54,8 +52,7 @@ h3 span {
   margin-left: 0.5em;
 }
 
-h4 {
-  margin-bottom: 0;
+h3 {
   font-size: 1.2em;
 }
 
@@ -91,6 +88,13 @@ dd dl dt {
 .about dt {
   background: none;
   color: var(--nav-hover);
+  font-weight: bold;
+  display: table;
+  padding: 0.2em 0.5em;
+  margin-bottom: 0.2em;
+  font-size: 1.1em;
+  border-bottom: 1px solid var(--border);
+  min-width: 15vw;
 }
 
 /* ----- /About ----- */
