--- a/src/content/popup.css
+++ b/src/content/popup.css
@@ -121,7 +121,7 @@ div.host {
 /* ----- Buttons ----- */
 div.buttons {
   display: grid;
-  grid-template-columns: auto auto auto auto;
+  grid-auto-flow: column;
   column-gap: 0.1em;
 }
 
