--- a/src/content/options.css
+++ b/src/content/options.css
@@ -366,20 +366,11 @@ input[type="color"] {
   padding: 0.3em 0.5em;
 }
 
-.options div.buttonTop {
-  text-align: right;
-}
-
 .options div.buttons {
   display: grid;
-  grid-template-columns: auto auto 1fr auto;
+  grid-template-columns: auto auto 1fr auto auto;
   column-gap: 0.5em;
   margin-top: 0.5em;
-}
-
-.options button.webRTC.reset span:nth-of-type(1),
-.options button.webRTC:not(.reset) span:nth-of-type(2) {
-  display: none;
 }
 /* ----- /Options ----- */
 
