--- a/src/content/popup.css
+++ b/src/content/popup.css
@@ -126,6 +126,10 @@ div.host button:hover {
   background: var(--hover);
 }
 
+button:disabled {
+  opacity: 0.4;
+}
+
 div.host select {
   grid-column: span 2;
 }
