--- a/src/content/spinner.css
+++ b/src/content/spinner.css
@@ -1,6 +1,7 @@
 /* ----- Spinner ----- */
 div.spinner {
   display: none;
+  grid-auto-flow: column;
   align-items: center;
   justify-content: center;
   background-color: #0003;
@@ -19,10 +20,10 @@ div.spinner {
   content: '';
   width: 8em;
   height: 8em;
-  border: 1em dotted #ddd;
-  border-color: #ddd4 #ddd8 #ddd var(--btn-bg);
+  border: 1em solid #ddd;
+  border-color: #ddd var(--btn-bg) #ddd var(--btn-bg);
   border-radius: 50%;
-  animation: spin 3s linear infinite;
+  animation: spin 1.5s linear infinite;
   margin-left: -2em;
 }
 
@@ -38,7 +39,7 @@ div.spinner {
 }
 
 .spinner.on {
-  display: flex;
+  display: grid;
   opacity: 1;
 }
 
