--- a/src/content/options.css
+++ b/src/content/options.css
@@ -351,31 +351,24 @@ input[type="color"] {
   resize: vertical;
 }
 
-.options div.globalExclude {
-  margin-top: 0.5em;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 0.2em;
-}
-
-.options div.globalExclude select {
-  grid-column-start: 1;
-  grid-column-end: 3;
-}
-
-.options div.globalExclude label {
-  background-color: var(--alt-bg);
-  padding: 0.3em 0.5em;
-}
-
 .options div.container,
-.options div.commands {
+.options div.commands,
+.options div.globalExclude {
   display: grid;
   grid-template-columns: minmax(max-content, 8em) max-content;
   gap: 0.2em 1em;
   margin-left: 1em;
   margin-bottom: 1em;
 }
+
+.options div.globalExclude {
+  grid-template-columns: minmax(max-content, 8em) 0.5fr;
+}
+
+.options div.globalExclude select {
+  grid-column-start: 2;
+}
+
 
 .options div.buttons {
   display: grid;
