--- a/src/content/options.css
+++ b/src/content/options.css
@@ -635,13 +635,15 @@ section.log {
          }
       }
       tr:nth-of-type(2) {
-         th:nth-of-type(1),
-         th:nth-of-type(7) {
-            border-bottom-left-radius: 2ch;
-         }
-         th:nth-of-type(6),
-         th:nth-of-type(10) {
-            border-bottom-right-radius: 2ch;
+         th {
+            &:nth-of-type(1),
+            &:nth-of-type(7) {
+               border-bottom-left-radius: 2ch;
+            }
+            &:nth-of-type(6),
+            &:nth-of-type(10) {
+               border-bottom-right-radius: 2ch;
+            }
          }
       }
       tr th {
